--- a/react-client/package.json
+++ b/react-client/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
     "typescript": "^4.9.5",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
